--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "lucide-react": "0.344.0",
-    "three": "0.161.0",
+    "@react-three/drei": "9.99.0",
     "@react-three/fiber": "8.15.16",
-    "@react-three/drei": "9.99.0"
+    "lucide-react": "0.344.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "three": "0.161.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
